grammar.js
    source_file: ($) =>
      optional(seq(commaSepSemi($), optional(";"))),

    query: ($) =>
      seq(
        optional($.use_clause),
        choice(
          seq(repeat($._reading_clause), choice($.return_clause, $.finish_clause)),
          repeat1($._reading_clause),
        ),
      ),

    use_clause: ($) => seq(kw("USE"), $.graph_ref),

    graph_ref: ($) =>
      choice(
        kw("CURRENT_PROPERTY_GRAPH"),
        kw("CURRENT_GRAPH"),
        kw("HOME_PROPERTY_GRAPH"),
        kw("HOME_GRAPH"),
        seq(optional(seq(optional(kw("PROPERTY")), kw("GRAPH"))), $.graph_name),
        seq(optional(seq(optional(kw("PROPERTY")), kw("GRAPH"))), $.parameter),
      ),

    _reading_clause: ($) =>
      choice(
        $.match_clause,
        $.insert_clause,
        $.set_clause,
        $.remove_clause,
        $.delete_clause,
        $.call_clause,
        $.unwind_clause,
        $.let_clause,
        $.filter_clause,
        $.with_clause,
        $.order_by_and_page,
      ),

    match_clause: ($) =>
      seq(
        optional(kw("OPTIONAL")),
        kw("MATCH"),
        optional($.match_mode),
        $.pattern,
        optional($.keep_clause),
        optional($.where_clause),
      ),

    // ISO 16.9, features G002 and G003. A match mode speaks about the
    // whole list of patterns where a path mode speaks about one path of
    // it: DIFFERENT EDGES, which is what a list naming none means, says
    // that no one edge answers two of the edge patterns of the list, and
    // REPEATABLE ELEMENTS lifts that. The singular noun and the BINDINGS
    // behind it are spellings of the same mode.
    match_mode: ($) =>
      choice(
        seq(kw("REPEATABLE"), choice(kw("ELEMENT"), kw("ELEMENTS")), optional($._binding_s)),
        seq(kw("DIFFERENT"), choice(kw("EDGE"), kw("EDGES")), optional($._binding_s)),
      ),

    _binding_s: ($) => choice(kw("BINDING"), kw("BINDINGS")),

    // ISO 16.9. A KEEP says a prefix once for a whole list of patterns
    // rather than once in front of each of them, and it belongs to a
    // graph pattern, which is why it is here and not in `pattern`: an
    // INSERT writes paths rather than choosing between them.
    keep_clause: ($) => seq(kw("KEEP"), $.path_prefix),

    unwind_clause: ($) => seq(kw("UNWIND"), $._expression, kw("AS"), field("name", $._name)),

    // ISO 14.6. The two GQL clauses that Cypher writes as a WITH and a
    // WHERE, split so that each does one thing: a LET adds a name and
    // keeps every name already bound, a FILTER keeps rows and binds
    // nothing. The WHERE after FILTER is the standard's own optional
    // word and says nothing the FILTER has not.
    let_clause: ($) => seq(kw("LET"), commaSep1($.let_item)),

    let_item: ($) => seq(field("name", $._name), "=", $._expression),

    filter_clause: ($) => seq(kw("FILTER"), optional(kw("WHERE")), $._expression),

    with_clause: ($) => seq(kw("WITH"), $.projection, optional($.where_clause)),

    return_clause: ($) => seq(kw("RETURN"), $.projection),

    finish_clause: ($) => kw("FINISH"),

    where_clause: ($) => seq(kw("WHERE"), $._expression),

    // The tail is greedy: where a projection could end and an order by
    // and page statement could begin, the words belong to the
    // projection. That is the engine's reading, and it is why the
    // statement form below is only ever what is left over.
    projection: ($) =>
      prec.right(
        seq(
          optional(kw("DISTINCT")),
          choice("*", $.projection_item),
          repeat(seq(",", $.projection_item)),
          optional($.order_by),
          optional($.page_offset),
          optional($.page_limit),
        ),
      ),

    // The same three parts standing where a statement stands, which is
    // the standard's order by and page statement. Each part is a whole
    // statement on its own, so the choice is written out rather than
    // built from three optionals: a rule that matches the empty string
    // is one tree-sitter refuses, and it would make every clause
    // boundary a place this rule could be.
    // It is greedy for the same reason the projection is: `SKIP 1
    // LIMIT 2` is one statement that takes a window, and not a
    // statement that skips followed by a statement that limits.
    order_by_and_page: ($) =>
      prec.right(
        choice(
          seq($.order_by, optional($.page_offset), optional($.page_limit)),
          seq($.page_offset, optional($.page_limit)),
          $.page_limit,
        ),
      ),

    // OFFSET is the standard's word for it and SKIP is the synonym.
    page_offset: ($) => seq(choice(kw("OFFSET"), kw("SKIP")), $._expression),

    page_limit: ($) => seq(kw("LIMIT"), $._expression),

    projection_item: ($) => seq($._expression, optional(seq(kw("AS"), field("alias", $._name)))),

    order_by: ($) => seq(kw("ORDER"), kw("BY"), commaSep1($.sort_item)),

    sort_item: ($) =>
      seq(
        $._expression,
        optional(choice(kw("ASC"), kw("ASCENDING"), kw("DESC"), kw("DESCENDING"))),
        optional($.null_ordering),
      ),

    null_ordering: ($) => seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST"))),

    // Patterns.

    pattern: ($) => commaSep1($.path),

    path: ($) =>
      seq(
        optional(seq(field("name", $._name), "=")),
        optional($.path_prefix),
        $._path_body,
      ),

    _path_body: ($) =>
      seq($._factor, repeat(choice(seq($.relationship, $._factor), $._factor))),

    subpath: ($) =>
      seq(
        "(",
        optional(seq(field("name", $._name), "=")),
        optional($.path_mode),
        $._path_body,
        optional($.where_clause),
        ")",
      ),

    // The seven path selectors of ISO 16.6, and the mode, which the
    // standard puts inside the prefix rather than behind it: the words
    // come in one order, the selector, then the mode, then PATH or
    // PATHS, then GROUP last of all. PATH and PATHS are noise the
    // standard allows, while GROUP is what tells k lengths from k paths
    // and is the one form whose count may be left out.
    path_prefix: ($) =>
      choice(
        seq(kw("ALL"), optional(kw("SHORTEST")), ...pathTail($)),
        seq(kw("ANY"), choice(kw("SHORTEST"), optional($.integer)), ...pathTail($)),
        seq(
          kw("SHORTEST"),
          choice(
            seq($.integer, ...pathTail($), optional($._group_or_groups)),
            seq(...pathTail($), $._group_or_groups),
          ),
        ),
        seq($.path_mode, optional($._path_or_paths)),
      ),

    _path_or_paths: ($) => choice(kw("PATH"), kw("PATHS")),

    _group_or_groups: ($) => choice(kw("GROUP"), kw("GROUPS")),

    path_mode: ($) => choice(kw("WALK"), kw("TRAIL"), kw("SIMPLE"), kw("ACYCLIC")),

    // The condition inside the parentheses is the element pattern
    // predicate of ISO 16.6, asked of the one element the pattern is
    // standing on and free to read what the pattern bound to its left.
    node: ($) =>
      seq(
        "(",
        optional(field("name", $._name)),
        repeat(seq(":", $.label_expr)),
        optional($.property_map),
        optional(seq(kw("WHERE"), $._expression)),
        ")",
      ),

    label_expr: ($) => seq($._label_term, repeat(seq("|", $._label_term))),

    _label_term: ($) => seq($._label_factor, repeat(seq("&", $._label_factor))),

    label: ($) => $._name,

    // The seven edge patterns of ISO 18.9 as one production. Both bars
    // are the same character and a tilde takes no arrowhead, which are
    // rules the engine applies after parsing rather than in it.
    relationship: ($) =>
      seq(
        optional("<"),
        $._bar,
        optional(seq(optional($.rel_detail), $._bar)),
        optional(">"),
        optional($.quantifier),
      ),

    // The graph pattern quantifier of ISO 16.10, which says what a hop
    // range inside the brackets says and is the form the standard's own
    // examples are written in.
    quantifier: ($) =>
      choice(
        "+",
        "*",
        seq("{", optional($.integer), optional(seq(",", optional($.integer))), "}"),
      ),

    _bar: ($) => choice("-", "~"),

    rel_detail: ($) =>
      seq(
        "[",
        optional(field("name", $._name)),
        optional(seq(":", $.label, repeat(seq("|", $.label)))),
        optional(seq("*", optional($.hop_range))),
        optional($.property_map),
        optional(seq(kw("WHERE"), $._expression)),
        "]",
      ),

    hop_range: ($) =>
      choice(seq($.integer, optional(seq("..", optional($.integer)))), seq("..", $.integer)),

    property_map: ($) =>
      seq("{", optional(commaSep1(seq(field("key", $._name), ":", $._expression))), "}"),

    // Expressions, loosest binding first.

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.is_expression,
        $.property_access,
        $._primary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(1, seq($._expression, kw("OR"), $._expression)),
        prec.left(2, seq($._expression, kw("XOR"), $._expression)),
        prec.left(3, seq($._expression, kw("AND"), $._expression)),
        prec.left(
          5,
          seq(
            $._expression,
            choice(
              "=",
              "<>",
              "<",
              "<=",
              ">",
              ">=",
              kw("IN"),
              seq(kw("STARTS"), kw("WITH")),
              seq(kw("ENDS"), kw("WITH")),
              kw("CONTAINS"),
            ),
            $._expression,
          ),
        ),
        // ISO 20.23. Concatenation binds tighter than a comparison and
        // looser than an addition, which is where the standard puts it.
        prec.left(6, seq($._expression, "||", $._expression)),
        prec.left(7, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(8, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    property_access: ($) => prec.left(9, seq($._expression, ".", field("property", $._name))),

    variable: ($) => $._name,

    // A name with a bracket after it. `PATH` is a name until a bracket
    // follows it, the same way `DATE` is a name until a string does, so
    // which name may stand here is a question for the binder and not
    // for the shape of the text.
    path_constructor: ($) =>
      prec(2, seq(field("name", $.identifier), "[", optional(commaSep1($._expression)), "]")),

    // GE03. A name that stands for a value for the length of one
    // expression, ISO 20.7, which is the LET clause said in a smaller
    // place. The `IN` closes the definitions rather than testing
    // membership, which is the engine's reading too: a test written at
    // the top of a definition goes in parentheses.
    function_call: ($) =>
      prec(
        2,
        seq(
          field("name", $._name),
          "(",
          optional(kw("DISTINCT")),
          optional(choice("*", commaSep1($._expression))),
          ")",
        ),
      ),

    list: ($) => seq("[", optional(commaSep1($._expression)), "]"),

    // ISO 20.19 lets the record name the type it is building, the way
    // 20.17 lets a list name its own. The list side of that needs no
    // rule of its own: `LIST [1, 2]` is a name with a bracket after
    // it, which is what `path_constructor` above already is.
    //
    // The name is written as an identifier and not as the keyword for
    // the reason it is there: it is a name until a brace follows it,
    // and spelling it as a keyword would take `record` away from every
    // query that binds a variable of that name.
    record: ($) => seq(optional(field("name", $.identifier)), $.property_map),

    // Value types.

    graph_name: ($) => choice($._name, seq("/", repeat(seq($._name, "/")), $._name)),

    _name: ($) => choice($.identifier, $.quoted_identifier),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    // A delimited name is quoted the way a string is (ISO 21.3): the
    // accent may be doubled to mean itself, the escapes are the same
    // escapes, and an `@` in front turns them off.
    parameter: ($) => /\$[A-Za-z0-9_]+/,

    literal: ($) =>
      choice(kw("NULL"), kw("TRUE"), kw("FALSE"), $.integer, $.float, $.string),

    // A name and a string is a temporal literal, which is the rule the
    // engine reads by: the name is a type only when a string follows.
    // The name may be two words, because LOCAL and ZONED are halves of
    // a name rather than names of their own.
    integer: ($) =>
      token(
        choice(
          /[0-9](_?[0-9])*[Mm]?/,
          /0[xX](_?[0-9a-fA-F])+/,
          /0[oO](_?[0-7])+/,
          /0[bB](_?[01])+/,
        ),
      ),
